<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/color_white">


    <EditText
        android:id="@+id/et_telephone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="8dp"
        android:inputType="number"
        android:hint="@string/telephone_number"
        style="@style/LoginEditStyle"
        android:textColorHint="#CCCCCC"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#EEEEEE"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        style="@style/LoginEditStyle"
        android:textColorHint="#CCCCCC"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#EEEEEE"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="right|center_vertical">

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_base"
            android:textSize="14sp"
            android:paddingRight="5dp"
            android:text="@string/register"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="8dp"
            android:background="@color/color_base"/>
        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:textColor="@color/color_base"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:text="@string/forget_pwd"/>

    </LinearLayout>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_button_big_corners_gradient"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:text="@string/login"/>

</LinearLayout>