<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">


    <EditText
        android:id="@+id/et_telephone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="8dp"
        android:inputType="number"
        android:hint="@string/telephone_number"
        style="@style/LoginEditStyle"
        android:textColorHint="#CCCCCC"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#EEEEEE"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/et_vcode"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="8dp"
            android:paddingRight="80dp"
            android:inputType="number"
            android:hint="@string/vcode_empty"
            style="@style/LoginEditStyle"
            android:textColorHint="#CCCCCC"/>

        <TextView
            android:id="@+id/tv_get_vcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:textColor="@color/color_base"
            android:textSize="12sp"
            android:text="@string/get_vcode"/>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#EEEEEE"/>

    <TextView
        android:id="@+id/tv_contact_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_receive_check_code"
        android:textColor="@color/color_base"
        android:textSize="13sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_button_big_corners_gradient"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/register_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:text="未注册爱零工的手机号，登录时将自动注册并代表您已经同意《爱零工注册协议》"/>

</LinearLayout>