<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/color_white">

        <TextView
            android:id="@+id/title_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color7"
            android:textSize="15dp"
            android:text="@string/bind" />

        <LinearLayout
            android:id="@+id/action_go_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/ease_common_tab_bg"
            >
            <ImageView
                android:layout_width="13dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:src="@drawable/back_icon"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/et_vcode"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="8dp"
            android:paddingRight="80dp"
            android:inputType="number"
            android:hint="@string/vcode_empty"
            style="@style/LoginEditStyle"
            android:textColorHint="#CCCCCC"/>

        <TextView
            android:id="@+id/tv_get_vcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:textColor="@color/color_base"
            android:textSize="12sp"
            android:text="@string/get_vcode"/>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#EEEEEE"/>


    <Button
        android:id="@+id/btn_bind"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_button_big_corners_gradient"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:text="@string/bind"/>

</LinearLayout>